--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@ html
    <!DOCTYPE html>
    <html>
    <head>
-     <title>My GitHub Profile</title>
-     <link rel="stylesheet" href="style.css">
+      <meta charset="UTF-8">
+      <meta http-equiv="X-UA-Competible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>My GitHub Profile</title>
+      <link rel="stylesheet" href="style.css">
    </head>
      <body>
        <header>
