--- a/index.html
+++ b/index.html
@@ -1,26 +1,45 @@
-html
-   <!DOCTYPE html>
-   <html>
-   <head>
-      <meta charset="UTF-8">
-      <meta http-equiv="X-UA-Competible" content="IE=edge">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>My GitHub Profile</title>
-      <link rel="stylesheet" href="style.css">
-   </head>
-     <body>
-       <header>
-         <h1>Welcome to my GitHub Profile</h1>
-       </header>
-       <main>
-         <section>
-           <h2>About Me</h2>
-           <p>Hi, I'm Muhammad Zahid, aspiring software engineer with a passion for learning new things.</p>
-         </section>
-       </main>
-       <footer>
-         <p>&copy; [2025] [MuhammadZahid]</p>
-       </footer>
-       <script src="script.js"></script>
-     </body>
-   </html>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Competible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My GitHub Profile</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+   
+<body>
+  <header>
+    <h1>Hi, I'm Muhammad Zahid</h1>
+  </header>
+     <main>
+       <section>
+         <h2>Aspiring software engineer learning full-stack development.</h2>
+         <p>Debugging as I go and adapting to new tools and technologies.</p>
+       </section>
+       <section>
+         <h2>Certifications</h2>
+         <ul>
+           <li>Salesforce Certified Administrator: Proficient in Salesforce platform configuration, user management, and process automation.</li>
+         </ul>
+       </section>
+       <section>
+         <h2>Projects</h2>
+         <ul>
+           <li>Portfolio Website (in progress): A personal project to showcase my learning journey and future projects.</li>
+         </ul>
+       </section>
+       <section>
+         <h2>Contact</h2>
+         <ul>
+           <li>📫 Email: <a href="mailto:mzahid.dev404@gmail.com">mzahid.dev404@gmail.com</a></li>
+           <li>🌐 <a href="https://x.com/mzahiddev404">X</a></li>
+         </ul>
+       </section>
+     </main>
+  <footer>
+    <p>&copy; 2025 Muhammad Zahid</p>
+  </footer>
+  <script src="script.js"></script>
+</body>
+</html>
