--- a/index.html
+++ b/index.html
@@ -29,6 +29,16 @@
            <li>Portfolio Website (in progress): A personal project to showcase my learning journey and future projects.</li>
          </ul>
        </section>
+<!--  skills as I progress through the 100Devs bootcamp -->
+       <section>
+          <h2>Skills</h2>
+            <ul>
+              <li>
+                <img src="https://img.shields.io/badge/HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white" alt="HTML5 Badge">
+              </li>
+              <li>CSS</li>
+            </ul>
+        </section>
        <section>
          <h2>Contact</h2>
          <ul>
