--- a/index.html
+++ b/index.html
@@ -1,65 +1,65 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Competible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My GitHub Profile</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-   
-<body>
-  <header>
-    <h1>Hi, I'm Muhammad Zahid</h1>
-  </header>
-     <main>
-       <section>
-         <h2>Aspiring software engineer learning full-stack development.</h2>
-         <p>Debugging as I go and adapting to new tools and technologies.</p>
-       </section>
-       <section>
-         <h2>Certifications</h2>
-         <ul>
-           <li>Salesforce Certified Administrator: Proficient in Salesforce platform configuration, user management, and process automation.</li>
-         </ul>
-       </section>
-       <section>
-         <h2>Projects</h2>
-         <ul>
-           <li>Portfolio Website (in progress): A personal project to showcase my learning journey and future projects.</li>
-         </ul>
-       </section>
-<!--  skills add here, as I progress -->
-       <section>
-          <h2>Skills</h2>
-            <ul>
-              <li>
-                <img src="https://img.shields.io/badge/HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white" alt="HTML5 Badge">
-              </li>
-              <li>
-                <img src="https://img.shields.io/badge/Salesforce-00A1E0?style=for-the-badge&logo=Salesforce&logoColor=white" alt="Salesforce Certified Administrator">
-          Salesforce Certified Administrator: Proficient in Salesforce platform configuration, user management, and process automation.
-              </li>
-              <li>
-                <img src="https://img.shields.io/badge/CSS3-1572B6?style=for-the-badge&logo=css3&logoColor=white" alt="CSS3 Badge">
-          CSS
-              </li>
-              <li>
-                <img src="https://img.shields.io/badge/Java-ED8B00?style=for-the-badge&logo=java&logoColor=white" alt="Java Badge">
-          Java
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Competible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>My GitHub Profile</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <header>
+          <h1>Hi, I'm Muhammad Zahid</h1>
+        </header>
+          <main>
+            <section>
+              <h2>Aspiring software engineer learning full-stack development.</h2>
+              <p>Debugging as I go and adapting to new tools and technologies.</p>
+            </section>
+            <section>
+              <h2>Certifications</h2>
+              <ul>
+                <li>Salesforce Certified Administrator: Proficient in Salesforce platform configuration, user management, and process automation.</li>
               </ul>
-        </section>
-       <section>
-         <h2>Contact</h2>
-         <ul>
-           <li>📫 Email: <a href="mailto:mzahid.dev404@gmail.com">mzahid.dev404@gmail.com</a></li>
-           <li>🌐 <a href="https://x.com/mzahiddev404">X</a></li>
-         </ul>
-       </section>
-     </main>
-  <footer>
-    <p>&copy; 2025 Muhammad Zahid</p>
-  </footer>
-  <script src="script.js"></script>
-</body>
+            </section>
+            <section>
+              <h2>Projects</h2>
+              <ul>
+                <li>Portfolio Website (in progress): A personal project to showcase my learning journey and future projects.</li>
+              </ul>
+            </section>
+      <!--  skills add here, as I progress -->
+            <section>
+                <h2>Skills</h2>
+                <ul>
+                    <li>
+                      <img src="https://img.shields.io/badge/HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white" alt="HTML5 Badge">
+                      HTML5      
+                    </li>
+                    <li>
+                      <img src="https://img.shields.io/badge/Salesforce-00A1E0?style=for-the-badge&logo=Salesforce&logoColor=white" alt="Salesforce Certified Administrator">
+                      Salesforce Certified Administrator: Proficient in Salesforce platform configuration, user management, and process automation.
+                    </li>
+                    <li>
+                      <img src="https://img.shields.io/badge/CSS3-1572B6?style=for-the-badge&logo=css3&logoColor=white" alt="CSS3 Badge">
+                      CSS
+                    </li>
+                    <li>
+                      <img src="https://img.shields.io/badge/Java-ED8B00?style=for-the-badge&logo=java&logoColor=white" alt="Java Badge">
+                      Java
+                  </ul>
+              </section>
+              <section>
+              <h2>Contact</h2>
+              <ul>
+                <li>📫 Email: <a href="mailto:mzahid.dev404@gmail.com">mzahid.dev404@gmail.com</a></li>
+                <li>🌐 <a href="https://x.com/mzahiddev404">X</a></li>
+              </ul>
+            </section>
+          </main>
+      <footer>
+        <p>&copy; 2025 Muhammad Zahid</p>
+      </footer>
+      <script src="script.js"></script>
+    </body>
 </html>
