--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header>
           <h1>Hi, I'm Muhammad Zahid</h1>
         </header>
-          <main>
+        <main>
             <section>
               <h2>Aspiring software engineer learning full-stack development.</h2>
               <p>Debugging as I go and adapting to new tools and technologies.</p>
@@ -31,8 +31,8 @@
       <!--  skills add here, as I progress -->
             <section>
                 <h2>Skills</h2>
-                <ul>
-                    <li>
+                <ul class="skill-list">
+                  <li>
                       <img src="https://img.shields.io/badge/HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white" alt="HTML5 Badge">
                     </li>
                     <li>
@@ -42,17 +42,30 @@
                       <img src="https://img.shields.io/badge/CSS3-1572B6?style=for-the-badge&logo=css3&logoColor=white" alt="CSS3 Badge">
                     </li>
                     <li>
-                      <img src="https://img.shields.io/badge/Java-ED8B00?style=for-the-badge&logo=java&logoColor=white" alt="Java Badge">
+                        <img src="https://img.shields.io/badge/Java-ED8B00?style=for-the-badge&logo=java&logoColor=white" alt="Java Badge">
                   </ul>
-              </section>
-              <section>
-              <h2>Contact</h2>
-              <ul>
-                <li>📫 Email: <a href="mailto:mzahid.dev404@gmail.com">mzahid.dev404@gmail.com</a></li>
-                <li>🌐 <a href="https://x.com/mzahiddev404">X</a></li>
-              </ul>
             </section>
-          </main>
+            <section>
+                <h2>Contact</h2>
+                <ul class="contact-list">
+                    <li>
+                      <a href="mailto:mzahid.dev404@gmail.com" class="contact-link">
+                        <img src="https://img.shields.io/badge/Email-blue" alt="Email Badge">
+                      </a>
+                  </li>
+                  <li>
+                      <a href="https://www.linkedin.com/in/zahidm" class="contact-link">
+                        <img src="https://img.shields.io/badge/LinkedIn-0077B5?style=for-the-badge&logo=linkedin&logoColor=white" alt="LinkedIn Badge">
+                      </a>
+                  </li>
+                  <li>
+                      <a href="https://x.com/mzahiddev404" class="contact-link">
+                        <img src="https://img.shields.io/badge/X-000000?style=for-the-badge&logo=x&logoColor=white" alt="X Badge">
+                      </a>
+                  </li>
+                </ul>
+            </section>
+        </main>
       <footer>
         <p>&copy; 2025 Muhammad Zahid</p>
       </footer>
