--- a/index.html
+++ b/index.html
@@ -2,34 +2,50 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Competible" content="IE=edge">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>My GitHub Profile</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <header>
+ <!-- Navigation Bar -->
+          <nav class="navbar">
+            <div class="container">
+              <div class="logo"><a href="#home">Home</a></div>
+                <ul class="nav-menu">
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#certifications">Certifications</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#skills">Skills</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </div>
+          </nav>
+          
+  <!-- Header Section -->
+        <header id="home">
           <h1>Hi, I'm Muhammad Zahid</h1>
         </header>
         <main>
-            <section>
-              <h2>Aspiring software engineer learning full-stack development.</h2>
-              <p>Debugging as I go and adapting to new tools and technologies.</p>
-            </section>
-            <section>
-              <h2>Certifications</h2>
-              <ul>
+          <section id="about">
+            <h2>Aspiring software engineer learning full-stack development.</h2>
+            <p>Debugging as I go and adapting to new tools and technologies.</p>
+          </section>
+ <!-- and so on for Projects, Skills, and Contact -->
+          <section id="certifications">
+            <h2>Certifications</h2>
+                        <ul>
                 <li>Salesforce Certified Administrator: Proficient in Salesforce platform configuration, user management, and process automation.</li>
               </ul>
             </section>
-            <section>
+            <section id="projects">
               <h2>Projects</h2>
               <ul>
                 <li>Portfolio Website (in progress): A personal project to showcase my learning journey and future projects.</li>
               </ul>
             </section>
-      <!--  skills add here, as I progress -->
-            <section>
+  <!-- Skills Section -->
+            <section id="skills">
                 <h2>Skills</h2>
                 <ul class="skill-list">
                   <li>
@@ -43,9 +59,10 @@
                     </li>
                     <li>
                         <img src="https://img.shields.io/badge/Java-ED8B00?style=for-the-badge&logo=java&logoColor=white" alt="Java Badge">
+                    </li>
                   </ul>
             </section>
-            <section>
+            <section id="contact">
                 <h2>Contact</h2>
                 <ul class="contact-list">
                     <li>
