--- a/index.html
+++ b/index.html
@@ -1,49 +1,60 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>My GitHub Profile</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
- <!-- Navigation Bar -->
-          <nav class="navbar">
-            <div class="container">
-              <div class="logo"><a href="#home">Home</a></div>
-                <ul class="nav-menu">
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#certifications">Certifications</a></li>
-                    <li><a href="#projects">Projects</a></li>
-                    <li><a href="#skills">Skills</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </div>
-          </nav>
-          
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My GitHub Profile</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+<!-- Navigation Bar -->
+<nav class="navbar">
+  <div class="container">
+    <div class="logo"><a href="#home">Home</a></div>
+    <div class="nav-toggle">
+      <span class="nav-toggle-icon"></span>
+    </div>
+    <ul class="nav-menu">
+      <li><a href="#about" aria-label="About">About</a></li>
+      <li><a href="#certifications" aria-label="Certifications">Certifications</a></li>
+      <li><a href="#projects" aria-label="Projects">Projects</a></li>
+      <li><a href="#skills" aria-label="Skills">Skills</a></li>
+      <li><a href="#contact" aria-label="Contact">Contact</a></li>
+    </ul>
+  </div>
+</nav>
+
   <!-- Header Section -->
-        <header id="home">
-          <h1>Hi, I'm Muhammad Zahid</h1>
-        </header>
-        <main>
-          <section id="about">
-            <h2>Aspiring software engineer learning full-stack development.</h2>
-            <p>Debugging as I go and adapting to new tools and technologies.</p>
-          </section>
- <!-- and so on for Projects, Skills, and Contact -->
-          <section id="certifications">
-            <h2>Certifications</h2>
-                        <ul>
-                <li>Salesforce Certified Administrator: Proficient in Salesforce platform configuration, user management, and process automation.</li>
-              </ul>
-            </section>
-            <section id="projects">
-              <h2>Projects</h2>
-              <ul>
-                <li>Portfolio Website (in progress): A personal project to showcase my learning journey and future projects.</li>
-              </ul>
-            </section>
+  <header id="home">
+    <div class="header-content">
+      <h1>Hi, I'm Muhammad Zahid</h1>
+      <p>I am a technology enthusiast and problem solver, currently learning full-stack web development at #100Devs .</p>
+    </div>
+  </header>
+
+  <main>
+    <!-- About Section -->
+    <section id="about">
+      <h2>About Me</h2>
+      <p>My focus is on HTML, CSS, JavaScript, and various frameworks. I aim to be a versatile software engineer, creating effective solutions for business success.</p>
+      <p>I thrive in collaborative environments, using my attention to detail and problem-solving skills to deliver results. I am always open to learning and taking on new challenges and further learning.</p>
+    </section>
+
+    <!-- Certifications Section -->
+    <section id="certifications">
+      <h2>Certifications</h2>
+      <ul>
+        <li>Salesforce Certified Administrator: Proficient in Salesforce platform configuration, user management, and process automation.</li>
+      </ul>
+    </section>
+
+    <!-- Projects Section -->
+    <section id="projects">
+      <h2>Projects</h2>
+      <ul>
+        <li>Portfolio Website (in progress): A personal project to showcase my learning journey and future projects. Built using HTML, CSS, and JavaScript, the website features a responsive design and interactive elements to provide visitors with an engaging experience.</li>
+      </ul>
+    </section>
   <!-- Skills Section -->
             <section id="skills">
                 <h2>Skills</h2>
@@ -62,6 +73,7 @@
                     </li>
                   </ul>
             </section>
+  <!-- Contact Section -->
             <section id="contact">
                 <h2>Contact</h2>
                 <ul class="contact-list">
