--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <header id="home">
     <div class="header-content">
       <h1>Hi, I'm Muhammad Zahid</h1>
-      <p>I am a technology enthusiast and problem solver, currently learning full-stack web development at #100Devs .</p>
+      <p>I am a technology enthusiast and problem solver, currently learning full-stack web development at #100Devs.</p>
     </div>
   </header>
 
@@ -37,7 +37,7 @@
     <section id="about">
       <h2>About Me</h2>
       <p>My focus is on HTML, CSS, JavaScript, and various frameworks. I aim to be a versatile software engineer, creating effective solutions for business success.</p>
-      <p>I thrive in collaborative environments, using my attention to detail and problem-solving skills to deliver results. I am always open to learning and taking on new challenges and further learning.</p>
+      <p>I thrive in collaborative environments, using my attention to detail and problem-solving skills to deliver results efficiently. I am always open to learning and taking on new challenges and further learning.</p>
     </section>
 
     <!-- Certifications Section -->
