--- a/index.html
+++ b/index.html
@@ -5,24 +5,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My GitHub Profile</title>
   <link rel="stylesheet" href="style.css">
+  		<!-- fontawesome -->
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
 </head>
-<body>
-<!-- Navigation Bar -->
-<nav class="navbar">
-  <div class="container">
-    <div class="logo"><a href="#home">Home</a></div>
-    <div class="nav-toggle">
-      <span class="nav-toggle-icon"></span>
+  <body>
+  <!-- Navigation Bar -->
+  <nav class="navbar">
+    <div class="container">
+      <div class="logo"><a href="#home">Home</a></div>
+      <div class="nav-toggle">
+        <span class="nav-toggle-icon"></span>
+      </div>
+      <ul class="nav-menu">
+        <li><a href="#about" aria-label="About">About</a></li>
+        <li><a href="#certifications" aria-label="Certifications">Certifications</a></li>
+        <li><a href="#projects" aria-label="Projects">Projects</a></li>
+        <li><a href="#skills" aria-label="Skills">Skills</a></li>
+        <li><a href="#contact" aria-label="Contact">Contact</a></li>
+      </ul>
     </div>
-    <ul class="nav-menu">
-      <li><a href="#about" aria-label="About">About</a></li>
-      <li><a href="#certifications" aria-label="Certifications">Certifications</a></li>
-      <li><a href="#projects" aria-label="Projects">Projects</a></li>
-      <li><a href="#skills" aria-label="Skills">Skills</a></li>
-      <li><a href="#contact" aria-label="Contact">Contact</a></li>
-    </ul>
-  </div>
-</nav>
+  </nav>
 
   <!-- Header Section -->
   <header id="home">
@@ -73,26 +76,31 @@
                     </li>
                   </ul>
             </section>
-  <!-- Contact Section -->
+<!-- Contact Section -->
             <section id="contact">
-                <h2>Contact</h2>
-                <ul class="contact-list">
-                    <li>
-                      <a href="mailto:mzahid.dev404@gmail.com" class="contact-link">
-                        <img src="https://img.shields.io/badge/Email-blue" alt="Email Badge">
-                      </a>
-                  </li>
-                  <li>
-                      <a href="https://www.linkedin.com/in/zahidm" class="contact-link">
-                        <img src="https://img.shields.io/badge/LinkedIn-0077B5?style=for-the-badge&logo=linkedin&logoColor=white" alt="LinkedIn Badge">
-                      </a>
-                  </li>
-                  <li>
-                      <a href="https://x.com/mzahiddev404" class="contact-link">
-                        <img src="https://img.shields.io/badge/X-000000?style=for-the-badge&logo=x&logoColor=white" alt="X Badge">
-                      </a>
-                  </li>
-                </ul>
+              <h2>Contact</h2>
+              <ul class="contact-list">
+                <li>
+                  <a href="mailto:mzahid.dev404@gmail.com" class="contact-link">
+                    <i class="fa-solid fa-envelope"></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.linkedin.com/in/zahidm" class="contact-link">
+                    <i class="fa-brands fa-linkedin-in"></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://x.com/mzahiddev404" class="contact-link">
+                    <i class="fa-brands fa-twitter"></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://github.com/mzahiddev404" class="contact-link">
+                    <i class="fa-brands fa-github"></i>
+                  </a>
+                </li>
+              </ul>
             </section>
         </main>
       <footer>
