--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
               <h2>Contact</h2>
               <ul class="contact-list">
                 <li>
-                  <a href="mailto:mzahid.dev404@gmail.com" class="contact-link">
-                    <i class="fa-solid fa-envelope"></i>
+                  <a href="https://github.com/mzahiddev404" class="contact-link">
+                    <i class="fa-brands fa-github"></i>
                   </a>
                 </li>
                 <li>
@@ -91,13 +91,13 @@
                   </a>
                 </li>
                 <li>
-                  <a href="https://x.com/mzahiddev404" class="contact-link">
-                    <i class="fa-brands fa-twitter"></i>
+                  <a href="mailto:mzahid.dev404@gmail.com" class="contact-link">
+                    <i class="fa-solid fa-envelope"></i>
                   </a>
                 </li>
                 <li>
-                  <a href="https://github.com/mzahiddev404" class="contact-link">
-                    <i class="fa-brands fa-github"></i>
+                  <a href="https://x.com/mzahiddev404" class="contact-link">
+                    <i class="fa-brands fa-twitter"></i>
                   </a>
                 </li>
               </ul>
@@ -109,3 +109,29 @@
       <script src="script.js"></script>
     </body>
 </html>
+
+
+
+
+<!--   
+<section id="contact">
+  <h2>Contact</h2>
+  <ul class="contact-list">
+      <li>
+        <a href="mailto:mzahid.dev404@gmail.com" class="contact-link">
+          <img src="https://img.shields.io/badge/Email-blue" alt="Email Badge">
+        </a>
+    </li>
+    <li>
+        <a href="https://www.linkedin.com/in/zahidm" class="contact-link">
+          <img src="https://img.shields.io/badge/LinkedIn-0077B5?style=for-the-badge&logo=linkedin&logoColor=white" alt="LinkedIn Badge">
+        </a>
+    </li>
+    <li>
+        <a href="https://x.com/mzahiddev404" class="contact-link">
+          <img src="https://img.shields.io/badge/X-000000?style=for-the-badge&logo=x&logoColor=white" alt="X Badge">
+        </a>
+    </li>
+  </ul>
+</section>
+-->
