--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
   <!-- Navigation Bar -->
   <nav class="navbar">
     <div class="container">
-      <div class="logo"><a href="#home">Home</a></div>
+      <div class="logo">
+          <a href="#home">
+              <img src="logo.png" alt="Profile image/logo" style="height: 50px; vertical-align: middle;"> <!--  logo image here -->
+            Home.
+          </a>
+      </div>
       <div class="nav-toggle">
         <span class="nav-toggle-icon"></span>
       </div>
