--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="logo">
           <a href="#home">
               <img src="logo.png" alt="Profile image/logo" style="height: 50px; vertical-align: middle;"> <!--  logo image here -->
-            Home.
+            Muhammad.
           </a>
       </div>
       <div class="nav-toggle">
