--- a/index.html
+++ b/index.html
@@ -84,28 +84,28 @@
 <!-- Contact Section -->
             <section id="contact">
               <h2>Contact</h2>
-              <ul class="contact-list">
-                <li>
-                  <a href="https://github.com/mzahiddev404" class="contact-link">
-                    <i class="fa-brands fa-github"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="https://www.linkedin.com/in/zahidm" class="contact-link">
-                    <i class="fa-brands fa-linkedin-in"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="mailto:mzahid.dev404@gmail.com" class="contact-link">
-                    <i class="fa-solid fa-envelope"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="https://x.com/mzahiddev404" class="contact-link">
-                    <i class="fa-brands fa-twitter"></i>
-                  </a>
-                </li>
-              </ul>
+                  <ul class="contact-list">
+                    <li>
+                      <a href="https://www.linkedin.com/in/zahidm" class="contact-link" title="LinkedIn">
+                        <i class="fa-brands fa-linkedin-in"></i>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="https://github.com/mzahiddev404" class="contact-link" title="GitHub">
+                        <i class="fa-brands fa-github"></i>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="mailto:mzahid.dev404@gmail.com" class="contact-link" title="Email">
+                        <i class="fa-solid fa-envelope"></i>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="https://x.com/mzahiddev404" class="contact-link" title="Twitter">
+                        <i class="fa-brands fa-twitter"></i>
+                      </a>
+                    </li>
+                  </ul>
             </section>
         </main>
       <footer>
