--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My GitHub Profile</title>
   <link rel="stylesheet" href="style.css">
-  		<!-- fontawesome -->
+<!-- fontawesome -->
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
 </head>
   <body>
-  <!-- Navigation Bar -->
+<!-- Navigation Bar -->
   <nav class="navbar">
     <div class="container">
       <div class="logo">
@@ -32,7 +32,7 @@
     </div>
   </nav>
 
-  <!-- Header Section -->
+<!-- Header Section -->
   <header id="home">
     <div class="header-content">
       <h1>Hi, I'm Muhammad Zahid</h1>
@@ -41,14 +41,14 @@
   </header>
 
   <main>
-    <!-- About Section -->
+<!-- About Section -->
     <section id="about">
       <h2>About Me</h2>
       <p>My focus is on HTML, CSS, JavaScript, and various frameworks. I aim to be a versatile software engineer, creating effective solutions for business success.</p>
       <p>I thrive in collaborative environments, using my attention to detail and problem-solving skills to deliver results efficiently. I am always open to learning and taking on new challenges and further learning.</p>
     </section>
 
-    <!-- Certifications Section -->
+<!-- Certifications Section -->
     <section id="certifications">
       <h2>Certifications</h2>
       <ul>
@@ -56,31 +56,43 @@
       </ul>
     </section>
 
-    <!-- Projects Section -->
+<!-- Projects Section -->
     <section id="projects">
       <h2>Projects</h2>
       <ul>
         <li>Portfolio Website (in progress): A personal project to showcase my learning journey and future projects. Built using HTML, CSS, and JavaScript, the website features a responsive design and interactive elements to provide visitors with an engaging experience.</li>
       </ul>
     </section>
-  <!-- Skills Section -->
-            <section id="skills">
-                <h2>Skills</h2>
-                <ul class="skill-list">
-                  <li>
-                      <img src="https://img.shields.io/badge/HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white" alt="HTML5 Badge">
-                    </li>
-                    <li>
-                      <img src="https://img.shields.io/badge/CSS3-1572B6?style=for-the-badge&logo=css3&logoColor=white" alt="CSS3 Badge">
-                    </li>
-                    <li>
-                      <img src="https://img.shields.io/badge/Salesforce-00A1E0?style=for-the-badge&logo=Salesforce&logoColor=white" alt="Salesforce Certified Administrator">
-                    </li>
-                    <li>
-                        <img src="https://img.shields.io/badge/Java-ED8B00?style=for-the-badge&logo=java&logoColor=white" alt="Java Badge">
-                    </li>
-                  </ul>
-            </section>
+<!-- Skills Section -->
+<section id="skills">
+  <h2>Skills</h2>
+  <ul class="skill-list">
+    <li>
+      <a href="#" class="skill-link">
+        <img src="https://img.shields.io/badge/HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white" alt="HTML5 Badge">
+        <span class="skill-tooltip">Markup language for creating web pages</span>
+      </a>
+    </li>
+    <li>
+      <a href="#" class="skill-link">
+        <img src="https://img.shields.io/badge/CSS3-1572B6?style=for-the-badge&logo=css3&logoColor=white" alt="CSS3 Badge">
+        <span class="skill-tooltip">Style sheet language for describing the presentation of a document</span>
+      </a>
+    </li>
+    <li>
+      <a href="#" class="skill-link">
+        <img src="https://img.shields.io/badge/JavaScript-F7DF1E?style=for-the-badge&logo=javascript&logoColor=black" alt="JavaScript Badge">
+        <span class="skill-tooltip">High-level programming language for web development</span>
+      </a>
+    </li>
+    <li>
+      <a href="#" class="skill-link">
+        <img src="https://img.shields.io/badge/Salesforce-00A1E0?style=for-the-badge&logo=Salesforce&logoColor=white" alt="Salesforce Badge">
+        <span class="skill-tooltip">Cloud-based customer relationship management (CRM) platform</span>
+      </a>
+    </li>
+  </ul>
+</section>
 <!-- Contact Section -->
             <section id="contact">
               <h2>Contact</h2>
