--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                       </a>
                     </li>
                     <li>
-                      <a href="https://x.com/mzahiddev404" class="contact-link" title="Twitter">
+                      <a href="https://x.com/mzahiddev404" class="contact-link" title="X(Twitter)">
                         <i class="fa-brands fa-twitter"></i>
                       </a>
                     </li>
