--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <header id="home">
     <div class="header-content">
       <h1>Hi, I'm Muhammad Zahid</h1>
-      <p>I am a technology enthusiast and problem solver, currently learning full-stack web development at #100Devs.</p>
+      <p>I am a technology enthusiast and problem solver, currently learning full-stack web development.</p>
     </div>
   </header>
 
