--- a/index.html
+++ b/index.html
@@ -82,7 +82,13 @@
     <li>
       <a href="#" class="skill-link">
         <img src="https://img.shields.io/badge/JavaScript-F7DF1E?style=for-the-badge&logo=javascript&logoColor=black" alt="JavaScript Badge">
-        <span class="skill-tooltip">High-level programming language for web development</span>
+        <span class="skill-tooltip">Programming language for web development</span>
+      </a>
+    </li>
+    <li>
+      <a href="#" class="skill-link">
+        <img src="https://img.shields.io/badge/Python-3776AB?style=for-the-badge&logo=python&logoColor=white" alt="Python Badge">
+        <span class="skill-tooltip">General-purpose programming language</span>
       </a>
     </li>
     <li>
@@ -93,7 +99,7 @@
     </li>
   </ul>
 </section>
-
+    
     <!-- Contact Section -->
             <section id="contact">
               <h2>Contact</h2>
