--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <header id="home">
     <div class="header-content">
       <h1>Hi, I'm Muhammad Zahid</h1>
-      <p>I am a technology enthusiast and problem solver, currently learning full-stack web development.</p>
+      <p>I am a technology enthusiast and problem solver, currently learning full-stack web development while also certified in Salesforce administration.</p>
     </div>
   </header>
 
@@ -52,7 +52,7 @@
     <section id="certifications">
       <h2>Certifications</h2>
       <ul>
-        <li>Salesforce Certified Administrator: Proficient in Salesforce platform configuration, user management, and process automation.</li>
+        <li>Salesforce Certified Administrator: Proficient in Salesforce platform configuration, user management, and process automation (Flows, Validation Rules, Page Layouts).</li>
       </ul>
     </section>
 
