--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <section id="about">
       <h2>About Me</h2>
       <p>My focus is on HTML, CSS, JavaScript, and various frameworks. I aim to be a versatile software engineer, creating effective solutions for business success.</p>
-      <p>I thrive in collaborative environments, using my attention to detail and problem-solving skills to deliver results efficiently. I am always open to learning and taking on new challenges and further learning.</p>
+      <p>I thrive in collaborative environments, using my attention to detail and problem-solving skills to deliver results efficiently. I am always open to learning, growing and taking on new challenges and further learning.</p>
     </section>
 
 <!-- Certifications Section -->
