--- a/index.html
+++ b/index.html
@@ -42,11 +42,15 @@
 
   <main>
 <!-- About Section -->
-    <section id="about">
-      <h2>About Me</h2>
-      <p>My focus is on HTML, CSS, JavaScript, and various frameworks. I aim to be a versatile software engineer, creating effective solutions for business success.</p>
-      <p>I thrive in collaborative environments, using my attention to detail and problem-solving skills to deliver results efficiently. I am always open to learning, growing and taking on new challenges and further learning.</p>
-    </section>
+<section id="about">
+  <h2>About Me</h2>
+  <p>
+    I’m a certified Salesforce Advanced Administrator and full-stack web developer in training. I specialize in building user-focused solutions that integrate clean UI, functional logic, and scalable architecture.
+  </p>
+  <p>
+    My background in clinical systems and data-heavy environments gives me a systems-first mindset. I'm currently building projects in HTML, CSS, JavaScript, and expanding into React, Node.js, and MongoDB.
+  </p>
+</section>
 
 <!-- Certifications Section -->
     <section id="certifications">
