--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <header id="home">
     <div class="header-content">
       <h1>Hi, I'm Muhammad Zahid</h1>
-      <p>I am a technology enthusiast and problem solver, currently learning full-stack web development while also certified in Salesforce administration.</p>
+      <p>Certified Salesforce Admin and full-stack developer in progress — building scalable, user-centered tools that automate and solve real problems. I no longer call myself an enthusiast. I’ve shipped things.</p>
     </div>
   </header>
 
