--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
   <header id="home">
     <div class="header-content">
       <h1>Hi, I'm Muhammad Zahid</h1>
-      <p>Certified Salesforce Admin and full-stack developer in progress — building scalable, user-centered tools that automate and solve real problems. I no longer call myself an enthusiast. I’ve shipped things.</p>
+      <p>Certified Salesforce Admin and full-stack web developer in training. I focus on building scalable, user-centered tools that automate processes and solve real-world problems. I’ve moved beyond tutorials; I ship, test, and iterate.
+.</p>
     </div>
   </header>
 
@@ -45,10 +46,12 @@
 <section id="about">
   <h2>About Me</h2>
   <p>
-    I’m a certified Salesforce Advanced Administrator and full-stack web developer in training. I specialize in building user-focused solutions that integrate clean UI, functional logic, and scalable architecture.
+    Certified Salesforce Administrator and full-stack developer in progress, building user-centered, scalable tools that automate and solve real-world problems.
+    I specialize in clean UI, functional logic, and scalable architecture, and bring a systems-first mindset from my clinical and data-heavy background.
   </p>
   <p>
-    My background in clinical systems and data-heavy environments gives me a systems-first mindset. I'm currently building projects in HTML, CSS, JavaScript, and expanding into React, Node.js, and MongoDB.
+    Currently developing projects in HTML, CSS, and JavaScript, while expanding into Node.js, React, and MongoDB through structured bootcamps like AZNext Web Developer (July 2025) and 100Devs.
+    I'm committed to continuous learning, hands-on development, and delivering practical software that works.
   </p>
 </section>
 
