--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     I specialize in clean UI, functional logic, and scalable architecture, and bring a systems-first mindset from my clinical and data-heavy background.
   </p>
   <p>
-    Currently developing projects in HTML, CSS, and JavaScript, while expanding into Node.js, React, and MongoDB through structured bootcamps like AZNext Web Developer (July 2025) and 100Devs.
+    Currently developing in HTML, CSS, and JavaScript, and expanding into Node.js, React, and MongoDB through structured bootcamps like AZNext Web Developer (July 2025) and 100Devs.
     I'm committed to continuous learning, hands-on development, and delivering practical software that works.
   </p>
 </section>
