--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
   <header id="home">
     <div class="header-content">
       <h1>Hi, I'm Muhammad Zahid</h1>
-      <p>Certified Salesforce Admin and full-stack web developer in training. I focus on building scalable, user-centered tools that automate processes and solve real-world problems. I’ve moved beyond tutorials; I ship, test, and iterate.
-</p>
+<!--       <p>Certified Salesforce Admin and full-stack web developer in training. I focus on building scalable, user-centered tools that automate processes and solve real-world problems. I’ve moved beyond tutorials; I ship, test, and iterate.
+</p> -->
     </div>
   </header>
 
