Add AZNext program to certifications
Included AZNext Web Developer Program under Certifications & Training.
Added "Currently Learning" section

--- a/index.html
+++ b/index.html
@@ -57,10 +57,27 @@
 
 <!-- Certifications Section -->
     <section id="certifications">
-      <h2>Certifications</h2>
+      <h2>Certifications & training</h2>
+  <ul>
+    <li>
+      <strong>Salesforce Certified Administrator</strong>
       <ul>
-        <li>Salesforce Certified Administrator: Proficient in Salesforce platform configuration, user management, and process automation (Flows, Validation Rules, Page Layouts).</li>
+        <li>Platform configuration</li>
+        <li>User management</li>
+        <li>Process automation (Flows, Validation Rules, Page Layouts)</li>
       </ul>
+    </li>
+
+    <li>
+      <strong>AZNext Web Developer (ASU)</strong> – Enrolled, Cohort July 2025
+      <ul>
+        <li>Focused on full-stack JavaScript development</li>
+      </ul>
+    </li>
+  </ul>
+
+  <h3>Currently Learning</h3>
+  <p>React ⚛️, Node.js 🌐, MongoDB 🍃, Git ✅, Agile 🌀</p>
     </section>
 
 <!-- Projects Section -->
