currently learning add ul li

--- a/index.html
+++ b/index.html
@@ -75,8 +75,14 @@
     </li>
   </ul>
 
-  <h3>Currently Learning</h3>
-  <p>React ⚛️, Node.js 🌐, MongoDB 🍃, Git ✅, Agile 🌀</p>
+<h3>Currently Learning</h3>
+<ul class="currently-learning">
+  <li>React ⚛️</li>
+  <li>Node.js 🌐</li>
+  <li>MongoDB 🍃</li>
+  <li>Git ✅</li>
+  <li>Agile 🌀</li>
+</ul>
     </section>
 
 <!-- Projects Section -->
