--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
 
 <h3>Currently Learning</h3>
 <ul class="currently-learning">
-  <li>React ⚛️</li>
-  <li>Node.js 🌐</li>
-  <li>MongoDB 🍃</li>
-  <li>Git ✅</li>
-  <li>Agile 🌀</li>
+  <li title="React">React ⚛️</li>
+  <li title="Node.js">Node.js 🌐</li>
+  <li title="MongoDB">MongoDB 🍃</li>
+  <li title="Git">Git ✅</li>
+  <li title="Agile">Agile 🌀</li>
 </ul>
     </section>
 
