Add wrap, div to currently learning

--- a/index.html
+++ b/index.html
@@ -76,13 +76,15 @@
   </ul>
 
 <h3>Currently Learning</h3>
-<ul class="currently-learning">
-  <li title="React">React ⚛️</li>
-  <li title="Node.js">Node.js 🌐</li>
-  <li title="MongoDB">MongoDB 🍃</li>
-  <li title="Git">Git ✅</li>
-  <li title="Agile">Agile 🌀</li>
-</ul>
+<div class="container">
+  <ul class="currently-learning">
+    <li title="React">React ⚛️</li>
+    <li title="Node.js">Node.js 🌐</li>
+    <li title="MongoDB">MongoDB 🍃</li>
+    <li title="Git">Git ✅</li>
+    <li title="Agile">Agile 🌀</li>
+  </ul>
+</div>
     </section>
 
 <!-- Projects Section -->
