Currently learning made strong - subsection

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </li>
   </ul>
 
-<h3>Currently Learning</h3>
+<strong>Currently Learning</strong>
 <div class="container">
   <ul class="currently-learning">
     <li title="React">React ⚛️</li>
