working on currently working - alignment

--- a/index.html
+++ b/index.html
@@ -75,16 +75,14 @@
     </li>
   </ul>
 
-<strong>Currently Learning</strong>
-<div class="container">
-  <ul class="currently-learning">
+<strong>Currently Learning:</strong>
+<ul class="currently-learning">
     <li title="React">React ⚛️</li>
     <li title="Node.js">Node.js 🌐</li>
     <li title="MongoDB">MongoDB 🍃</li>
     <li title="Git">Git ✅</li>
     <li title="Agile">Agile 🌀</li>
   </ul>
-</div>
     </section>
 
 <!-- Projects Section -->
