Wrapped certification entire section inside a single <div class="container">
misaligned currently working

--- a/index.html
+++ b/index.html
@@ -55,35 +55,38 @@
 </section>
 
 <!-- Certifications Section -->
-    <section id="certifications">
-      <h2>Certifications & training</h2>
-  <ul>
-    <li>
-      <strong>Salesforce Certified Administrator</strong>
-      <ul>
-        <li>Platform configuration</li>
-        <li>User management</li>
-        <li>Process automation (Flows, Validation Rules, Page Layouts)</li>
-      </ul>
-    </li>
+<section id="certifications">
+  <h2>Certifications & training</h2>
 
-    <li>
-      <strong>AZNext Web Developer (ASU)</strong> – Enrolled, Cohort July 2025
-      <ul>
-        <li>Focused on full-stack JavaScript development</li>
-      </ul>
-    </li>
-  </ul>
+  <div class="container">
+    <ul>
+      <li>
+        <strong>Salesforce Certified Administrator</strong>
+        <ul>
+          <li>Platform configuration</li>
+          <li>User management</li>
+          <li>Process automation (Flows, Validation Rules, Page Layouts)</li>
+        </ul>
+      </li>
 
-<strong>Currently Learning:</strong>
-<ul class="currently-learning">
-    <li title="React">React ⚛️</li>
-    <li title="Node.js">Node.js 🌐</li>
-    <li title="MongoDB">MongoDB 🍃</li>
-    <li title="Git">Git ✅</li>
-    <li title="Agile">Agile 🌀</li>
-  </ul>
-    </section>
+      <li>
+        <strong>AZNext Web Developer (ASU)</strong> – Enrolled, Cohort July 2025
+        <ul>
+          <li>Focused on full-stack JavaScript development</li>
+        </ul>
+      </li>
+    </ul>
+
+    <strong class="learning-label">Currently Learning:</strong>
+    <ul class="currently-learning">
+      <li title="React">React ⚛️</li>
+      <li title="Node.js">Node.js 🌐</li>
+      <li title="MongoDB">MongoDB 🍃</li>
+      <li title="Git">Git ✅</li>
+      <li title="Agile">Agile 🌀</li>
+    </ul>
+  </div>
+</section>
 
 <!-- Projects Section -->
     <section id="projects">
