Update currently learning div class

--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
       </li>
     </ul>
 
-    <strong class="learning-label">Currently Learning:</strong>
+  <strong>Currently Learning</strong>
+  <div class="currently-learning-heading">Currently Learning</div>
     <ul class="currently-learning">
       <li title="React">React ⚛️</li>
       <li title="Node.js">Node.js 🌐</li>
