Update Portfolio - added github link to code

--- a/index.html
+++ b/index.html
@@ -91,9 +91,14 @@
     <section id="projects">
       <h2>Projects</h2>
       <ul>
-        <li>Portfolio Website (in progress): A personal project to showcase my learning journey and future projects. Built using HTML, CSS, and JavaScript, the website features a responsive design and interactive elements to provide visitors with an engaging experience.</li>
+        <li>
+          <strong>Portfolio Website</strong> (in progress): A personal project to showcase my learning journey and future work.<br>
+          Built using HTML, CSS, and JavaScript. The site is fully responsive with some interactive touches.<br>
+          <a href="https://github.com/mzahiddev404/mzahiddev404.github.io" target="_blank">💻 View Code</a>
+        </li>
       </ul>
     </section>
+    
 <!-- Skills Section -->
 <section id="skills">
   <h2>Skills</h2>
