Update username logmzahid

--- a/index.html
+++ b/index.html
@@ -146,17 +146,17 @@
                       </a>
                     </li>
                     <li>
-                      <a href="https://github.com/mzahiddev404" class="contact-link" title="GitHub">
+                      <a href="https://github.com/logmzahid" class="contact-link" title="GitHub">
                         <i class="fa-brands fa-github"></i>
                       </a>
                     </li>
                     <li>
-                      <a href="mailto:mzahid.dev404@gmail.com" class="contact-link" title="Email">
+                      <a href="mailto:logmzahid@gmail.com" class="contact-link" title="Email">
                         <i class="fa-solid fa-envelope"></i>
                       </a>
                     </li>
                     <li>
-                      <a href="https://x.com/mzahiddev404" class="contact-link" title="X(Twitter)">
+                      <a href="https://x.com/logmzahid" class="contact-link" title="X(Twitter)">
                         <i class="fa-brands fa-twitter"></i>
                       </a>
                     </li>
@@ -175,7 +175,7 @@
   <h2>Contact</h2>
   <ul class="contact-list">
       <li>
-        <a href="mailto:mzahid.dev404@gmail.com" class="contact-link">
+        <a href="mailto:logmzahid@gmail.com" class="contact-link">
           <img src="https://img.shields.io/badge/Email-blue" alt="Email Badge">
         </a>
     </li>
@@ -185,7 +185,7 @@
         </a>
     </li>
     <li>
-        <a href="https://x.com/mzahiddev404" class="contact-link">
+        <a href="https://x.com/logmzahid" class="contact-link">
           <img src="https://img.shields.io/badge/X-000000?style=for-the-badge&logo=x&logoColor=white" alt="X Badge">
         </a>
     </li>
