Update index.html username

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <li>
           <strong>Portfolio Website</strong> (in progress): A personal project to showcase my learning journey and future work.<br>
           Built using HTML, CSS, and JavaScript. The site is fully responsive with some interactive touches.<br>
-          <a href="https://github.com/logmzahid/logmzahid.github.io" target="_blank">💻 View Code</a>
+          <a href="https://github.com/mzahiddev404/mzahiddev404.github.io" target="_blank">💻 View Code</a>
         </li>
       </ul>
     </section>
@@ -146,12 +146,12 @@
                       </a>
                     </li>
                     <li>
-                      <a href="https://github.com/logmzahid" class="contact-link" title="GitHub">
+                      <a href="https://github.com/mzahiddev404" class="contact-link" title="GitHub">
                         <i class="fa-brands fa-github"></i>
                       </a>
                     </li>
                     <li>
-                      <a href="mailto:logmzahid@gmail.com" class="contact-link" title="Email">
+                      <a href="mailto:mzahiddev404@gmail.com" class="contact-link" title="Email">
                         <i class="fa-solid fa-envelope"></i>
                       </a>
                     </li>
@@ -175,7 +175,7 @@
   <h2>Contact</h2>
   <ul class="contact-list">
       <li>
-        <a href="mailto:logmzahid@gmail.com" class="contact-link">
+        <a href="mailto:mzahiddev404@gmail.com" class="contact-link">
           <img src="https://img.shields.io/badge/Email-blue" alt="Email Badge">
         </a>
     </li>
