Update index.html github username

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <li>
           <strong>Portfolio Website</strong> (in progress): A personal project to showcase my learning journey and future work.<br>
           Built using HTML, CSS, and JavaScript. The site is fully responsive with some interactive touches.<br>
-          <a href="https://github.com/mzahiddev404/mzahiddev404.github.io" target="_blank">💻 View Code</a>
+          <a href="https://mzahiddev404.github.io/" target="_blank">💻 View Code</a>
         </li>
       </ul>
     </section>
