--- a/index.html
+++ b/index.html
@@ -167,6 +167,10 @@
         <p>&copy; 2025 Muhammad Zahid</p>
       </footer>
       <script src="script.js"></script>
+    <!-- BACK TO TOP BUTTON HERE -->
+      <div class="btt-container">
+        <a href="#home" class="btt">Back to Top</a>
+      </div>
     </body>
 </html>
 
