added background color picker project to portfolio section

--- a/index.html
+++ b/index.html
@@ -96,6 +96,14 @@
           Built using HTML, CSS, and JavaScript. The site is fully responsive with some interactive touches.<br>
           <a href="https://mzahiddev404.github.io/" target="_blank">💻 View Code</a>
         </li>
+        <li>
+          <strong>Background Color Picker (AZNext Prework)</strong>: A simple app that changes the background color using clickable buttons.<br>
+          Practiced DOM methods like <code>querySelector</code>, event listeners, and clean CSS UI.<br>
+          <a href="https://mzahiddev404.github.io/background-color-picker-prework/" target="_blank">🎨 View Live</a>
+          |
+          <a href="https://github.com/mzahiddev404/background-color-picker-prework" target="_blank">🔗 View Code</a>
+        </li>
+
       </ul>
     </section>
     
